--- a/src/book.tex
+++ b/src/book.tex
@@ -414,6 +414,10 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 \usepackage{pgfplotstable}
 \usepackage{makecell}
 
+\usepackage{attachfile}
+\usepackage{pdflscape}
+\usepackage[figuresright]{rotating}
+
 \begin{document}    
 \ifx\forprint\undefined
 \includepdf{\base/illu/cover_front.pdf}
