--- a/src/level_data_appendix.tex
+++ b/src/level_data_appendix.tex
@@ -1,4 +1,4 @@
-\chapter{Appendix: Enemy Data}
+\chapter{Enemy Data}
 This section provides the level data for each wave of enemies in each
 planet. Figures are provided to indicate the appearance and movement
 pattern of the enemy.
