--- a/src/music.tex
+++ b/src/music.tex
@@ -21,8 +21,112 @@ a completely different tune being generated.
 The routine responsible for creating this music is remarkably short so I've reproduced it here
 in full before we start to dive in and try to understand what's going on.
 
-\CopyPartialFile{../iridisalpha/src/iridisalpha.asm}{tmp.asm}{776}{864}%
-\lstinputlisting[caption=Routine responsible for playing the title tune., basicstyle=\tiny]{tmp.asm}
+\begin{lstlisting}[caption=Routine responsible for playing the title tune.]
+PlayTitleScreenMusic
+        DEC baseNoteDuration
+        BEQ MaybeStartNewTune
+        RTS
+
+MaybeStartNewTune   
+        LDA previousBaseNoteDuration
+        STA baseNoteDuration
+
+        DEC numberOfNotesToPlayInTune
+        BNE MaybePlayVoice1
+
+        ; Set up a new tune.
+        LDA #$C0 ; 193
+        STA numberOfNotesToPlayInTune
+
+        ; This is what will eventually time us out of playing
+        ; the title music and enter attract mode.
+        INC f7PressedOrTimedOutToAttractMode
+
+        LDX notesPlayedSinceLastKeyChange
+        LDA titleMusicNoteArray,X
+        STA offsetForNextVoice1Note
+
+        ; We'll only select a new tune when we've reached the
+        ; beginning of a new 16 bar structure.
+        INX
+        TXA
+        AND #$03
+        STA notesPlayedSinceLastKeyChange
+        BNE MaybePlayVoice1
+
+        JSR SelectNewNotesToPlay
+
+MaybePlayVoice1   
+        DEC voice1NoteDuration
+        BNE MaybePlayVoice2
+
+        LDA #$30
+        STA voice1NoteDuration
+
+        LDX voice1IndexToMusicNoteArray
+        LDA titleMusicNoteArray,X
+        CLC
+        ADC offsetForNextVoice1Note
+        TAY
+        STY offsetForNextVoice2Note
+
+        JSR PlayNoteVoice1
+
+        INX
+        TXA
+        AND #$03
+        STA voice1IndexToMusicNoteArray
+
+MaybePlayVoice2   
+        DEC voice2NoteDuration
+        BNE MaybePlayVoice3
+
+        LDA #$0C
+        STA voice2NoteDuration
+        LDX voice2IndexToMusicNoteArray
+        LDA titleMusicNoteArray,X
+        CLC
+        ADC offsetForNextVoice2Note
+
+        ; Use this new value to change the key of the next four
+        ; notes played by voice 3. 
+        STA offsetForNextVoice3Note
+
+        TAY
+        JSR PlayNoteVoice2
+        INX
+        TXA
+        AND #$03
+        STA voice2IndexToMusicNoteArray
+
+MaybePlayVoice3   
+        DEC voice3NoteDuration
+        BNE ReturnFromTitleScreenMusic
+
+        LDA #$03
+        STA voice3NoteDuration
+
+        ; Play the note currently pointed to by 
+        ; voice3IndexToMusicNoteArray in titleMusicNoteArray.
+        LDX voice3IndexToMusicNoteArray
+        LDA titleMusicNoteArray,X
+        CLC
+        ADC offsetForNextVoice3Note
+        TAY
+        JSR PlayNoteVoice3
+
+        ; Move voice3IndexToMusicNoteArray to the next
+        ; position in titleMusicNoteArray.
+        INX
+        TXA
+        ; Since it's only 4 bytes long ensure we wrap
+        ; back to 0 if it's greater than 3.
+        AND #$03
+        STA voice3IndexToMusicNoteArray
+
+ReturnFromTitleScreenMusic   
+        RTS
+\end{lstlisting}
 
 \subsection{Some Basics}
 The rudiments of playing music on the Commodore 64 are simple. It has a powerful-for-its-time
@@ -36,9 +140,17 @@ Playing a note on one of the voices consists of loading a two-byte value into th
 (or 'register') associated with that voice. Here's the routine in Iridis used to play a note
 for the theme tune on Voice '1':
 
-\CopyPartialFile{../iridisalpha/src/iridisalpha.asm}{tmp.asm}{869}{877}%
-\lstinputlisting[caption=Plays a note on Voice 1. The routine is supplied with a value in Y
-that indexes into two arrays\ containing the first (Hi) and second (Lo) byte respectively\ associated with the selected note.]{tmp.asm}
+\begin{lstlisting}[caption=Plays a note on Voice 1. The routine is supplied with a value in Y
+that indexes into two arrays\ containing the first (Hi) and second (Lo) byte respectively\ associated with the selected note.]
+PlayNoteVoice1
+        LDA #$21
+        STA $D404    ;Voice 1: Control Register
+        LDA titleMusicLowBytes,Y
+        STA $D400    ;Voice 1: Frequency Control - Low-Byte
+        LDA titleMusicHiBytes,Y
+        STA $D401    ;Voice 1: Frequency Control - High-Byte
+        RTS
+\end{lstlisting}
 
 Once the selected bytes have been loaded into \icode{\$D400} and \icode{\$D401} the new note will start playing. 
 It's as blunt an instrument as that. (Well not quite, we'll cover some other gory details soon). 
@@ -181,10 +293,24 @@ With 96 notes in total available, Iridis only uses 72 of them, omitting the 2 lo
 note table in the game. This pair of arrays are where the title music logic plucks the note to be played once it has 
 dynamically selected one:
 
-\CopyPartialFile{../iridisalpha/src/iridisalpha.asm}{tmp.asm}{738}{750}%
-\lstinputlisting[caption=The lookup table for all of the notes used in the theme music. The two lowest available octaves are not
+
+\begin{lstlisting}[caption=The lookup table for all of the notes used in the theme music. The two lowest available octaves are not
 used by the game. To see this for yourself\, compare the first entry in \icode{titleMusicHiBytes}/\icode{titleMusicLowBytes} (\$08 and \$61\,
-giving \$0861) with the entry highlighted in red in the previous table.,basicstyle=\tiny]{tmp.asm}
+giving \$0861) with the entry highlighted in red in the previous table.,basicstyle=\tiny]
+                    ;      C   C#  D   D#  E   F   F#  G   G#  A   A#  B
+titleMusicHiBytes   .BYTE $08,$08,$09,$09,$0A,$0B,$0B,$0C,$0D,$0E,$0E,$0F  ; 4
+                    .BYTE $10,$11,$12,$13,$15,$16,$17,$19,$1A,$1C,$1D,$1F  ; 5
+                    .BYTE $21,$23,$25,$27,$2A,$2C,$2F,$32,$35,$38,$3B,$3F  ; 6
+                    .BYTE $43,$47,$4B,$4F,$54,$59,$5E,$64,$6A,$70,$77,$7E  ; 7
+                    .BYTE $86,$8E,$96,$9F,$A8,$B3,$BD,$C8,$D4,$E1,$EE,$FD  ; 8
+
+                    ;      C   C#  D   D#  E   F   F#  G   G#  A   A#  B
+titleMusicLowBytes  .BYTE $61,$E1,$68,$F7,$8F,$30,$DA,$8F,$4E,$18,$EF,$D2  ; 4
+                    .BYTE $C3,$C3,$D1,$EF,$1F,$60,$B5,$1E,$9C,$31,$DF,$A5  ; 5
+                    .BYTE $87,$86,$A2,$DF,$3E,$C1,$6B,$3C,$39,$63,$BE,$4B  ; 6
+                    .BYTE $0F,$0C,$45,$BF,$7D,$83,$D6,$79,$73,$C7,$7C,$97  ; 7
+                    .BYTE $1E,$18,$8B,$7E,$FA,$06,$AC,$F3,$E6,$8F,$F8,$2E  ; 8
+\end{lstlisting}
 
 So now that we know where the notes are and how to make them go beep we just have to figure out the order that \icode{PlayTitleScreenMusic}
 contrives to play them.
@@ -240,9 +366,28 @@ voices.
 
 Here it is deciding whether or not to play new note on Voice 1:
 
-\CopyPartialFile{../iridisalpha/src/iridisalpha.asm}{tmp.asm}{807}{813}%
-\lstinputlisting[caption=\icode{MaybePlayVoice1}\, part of \icode{PlayTitleScreenMusic}.,basicstyle=\tiny]{tmp.asm}
+\begin{lstlisting}[caption=\icode{MaybePlayVoice1}\, part of \icode{PlayTitleScreenMusic}.,basicstyle=\tiny]
+MaybePlayVoice1   
+        DEC voice1NoteDuration
+        BNE MaybePlayVoice2
 
+        LDA #$30
+        STA voice1NoteDuration
+
+        LDX voice1IndexToMusicNoteArray
+        LDA titleMusicNoteArray,X
+        CLC
+        ADC offsetForNextVoice1Note
+        TAY
+        STY offsetForNextVoice2Note
+
+        JSR PlayNoteVoice1
+
+        INX
+        TXA
+        AND #$03
+        STA voice1IndexToMusicNoteArray
+\end{lstlisting}
 \icode{voice1NoteDuration} is used to count the interval between notes on Voice 1. It's decremented on each
 visit and when it reaches zero it gets reset to 48 (\$30) and a note is played. What's being counted here isn't
 seconds, it's cycles or 'interrupts'. So this translates to only a few seconds between notes being played.
@@ -251,11 +396,56 @@ The same is done for both Voice 2 and Voice 3 but the intervals are shorter: 12 
 the relationship we see in the sheet music, one note in Voice 1 for every sixteen in Voice 3 (48/3=16) and one note in
 Voice 2 for every four in Voice 3 (12/3=4).
 
-\CopyPartialFile{../iridisalpha/src/iridisalpha.asm}{tmp.asm}{828}{833}%
-\lstinputlisting[caption=\icode{MaybePlayVoice2}\, part of \icode{PlayTitleScreenMusic}.,basicstyle=\tiny]{tmp.asm}
+\begin{lstlisting}[caption=\icode{MaybePlayVoice2}\, part of \icode{PlayTitleScreenMusic}.]
+MaybePlayVoice2   
+        DEC voice2NoteDuration
+        BNE MaybePlayVoice3
 
-\CopyPartialFile{../iridisalpha/src/iridisalpha.asm}{tmp.asm}{846}{851}%
-\lstinputlisting[caption=\icode{MaybePlayVoice3}\, part of \icode{PlayTitleScreenMusic}.,basicstyle=\tiny]{tmp.asm}
+        LDA #$0C
+        STA voice2NoteDuration
+        LDX voice2IndexToMusicNoteArray
+        LDA titleMusicNoteArray,X
+        CLC
+        ADC offsetForNextVoice2Note
+
+        ; Use this new value to change the key of the next four
+        ; notes played by voice 3. 
+        STA offsetForNextVoice3Note
+
+        TAY
+        JSR PlayNoteVoice2
+        INX
+        TXA
+        AND #$03
+        STA voice2IndexToMusicNoteArray
+\end{lstlisting}
+
+\begin{lstlisting}[caption= \icode{MaybePlayVoice3}\, part of \icode{PlayTitleScreenMusic}.]
+MaybePlayVoice3   
+        DEC voice3NoteDuration
+        BNE ReturnFromTitleScreenMusic
+
+        LDA #$03
+        STA voice3NoteDuration
+
+        ; Play the note currently pointed to by 
+        ; voice3IndexToMusicNoteArray in titleMusicNoteArray.
+        LDX voice3IndexToMusicNoteArray
+        LDA titleMusicNoteArray,X
+        CLC
+        ADC offsetForNextVoice3Note
+        TAY
+        JSR PlayNoteVoice3
+
+        ; Move voice3IndexToMusicNoteArray to the next
+        ; position in titleMusicNoteArray.
+        INX
+        TXA
+        ; Since it's only 4 bytes long ensure we wrap
+        ; back to 0 if it's greater than 3.
+        AND #$03
+        STA voice3IndexToMusicNoteArray
+\end{lstlisting}
 
 \begin{tcolorbox}[%
   breakable,
@@ -338,8 +528,15 @@ This 4 note basis is driven by the 4 bytes in \icode{titleMusicNoteArray}. Gener
 consists of calculating and loading 4 values into this array and using them as an index into  
 \icode{titleMusicLowBytes}/\icode{titleMusicHiBytes} to play the actual note.
 
-\CopyPartialFile{../iridisalpha/src/iridisalpha.asm}{tmp.asm}{752}{757}%
-\lstinputlisting[]{tmp.asm}
+\begin{lstlisting}
+; This seeds the title music. Playing around with these first
+; four bytes alters the first few seconds of the title music.
+; The routine for the title music uses these 4 bytes to determine
+; the notes to play.
+; This array is periodically replenished from titleMusicSeedArray by
+; SelectNewNotesToPlay.
+titleMusicNoteArray .BYTE $00,$07,$0C,$07
+\end{lstlisting}
 
 Notice how the values populated in \icode{titleMusicNoteArray} at start-up match the structure of our basic
 tonic formula, e.g. C3-G3-C4-G3.
@@ -368,10 +565,17 @@ tonic formula, e.g. C3-G3-C4-G3.
 
 Playing the 4 note phrase we've stored in this array is done here:
 
-\CopyPartialFile{../iridisalpha/src/iridisalpha.asm}{tmp.asm}{853}{874}%
-\lstinputlisting[]{tmp.asm}
-\CopyPartialFile{../iridisalpha/src/iridisalpha.asm}{tmp.asm}{903}{913}%
-\lstinputlisting[]{tmp.asm}
+\begin{lstlisting}
+        ; Play the note currently pointed to by 
+        ; voice3IndexToMusicNoteArray in titleMusicNoteArray.
+        LDX voice3IndexToMusicNoteArray
+        LDA titleMusicNoteArray,X
+        CLC
+        ADC offsetForNextVoice3Note
+        TAY
+        JSR PlayNoteVoice3
+
+\end{lstlisting}
 
 The variable that's doing a bit of extra work here is \icode{offsetForNextVoice3Note}. This is what's shifting the
 notes for subsequent bars from the base position of C3-G3-C4-G3 to G3-D4-G4-D4. This value has to get updated after
@@ -380,8 +584,29 @@ every four notes, otherwise we just keep playing the same four notes over and ov
 The obvious place to do this is when play a note on Voice 2, which is something we're already doing every 4 notes
 in Voice 3.
 
-\CopyPartialFile{../iridisalpha/src/iridisalpha.asm}{tmp.asm}{828}{848}%
-\lstinputlisting[]{tmp.asm}
+\begin{lstlisting}
+MaybePlayVoice2   
+        DEC voice2NoteDuration
+        BNE MaybePlayVoice3
+
+        LDA #$0C
+        STA voice2NoteDuration
+        LDX voice2IndexToMusicNoteArray
+        LDA titleMusicNoteArray,X
+        CLC
+        ADC offsetForNextVoice2Note
+
+        ; Use this new value to change the key of the next four
+        ; notes played by voice 3. 
+        STA offsetForNextVoice3Note
+
+        TAY
+        JSR PlayNoteVoice2
+        INX
+        TXA
+        AND #$03
+        STA voice2IndexToMusicNoteArray
+\end{lstlisting}
 
 As we can see the mechanics of playing a note for Voice 2 are otherwise the same as Voice 3. We're playing the
 same phrase encoded in \icode{titleMusicNoteArray} that is played by Voice 3 but just over a longer period of
@@ -573,27 +798,120 @@ The selection of our 4-byte structure for each tune happens in \icode{SelectNewN
 value has been plucked, this is used as an index into \icode{titleMusicSeedArray} and the next four values
 are populated into our magic 4-byte sequence that determines everything \icode{titleMusicNoteArray}.
 
-\CopyPartialFile{../iridisalpha/src/iridisalpha.asm}{tmp.asm}{943}{961}%
-\lstinputlisting[caption=Put a seed byte in the accumulator and multiply this by 4 if it's not zero. This
-gives us what we need for the next step.]{tmp.asm}
+\begin{lstlisting}[caption=Put a seed byte in the accumulator and multiply this by 4 if it's not zero. This
+gives us what we need for the next step.]
+SelectNewNotesToPlay
+        ; Get a random value between 0 and 15.
+        JSR PutProceduralByteInAccumulator
+        AND #$0F
+        ; Jump to InitializeSeedLoop if it's zero.
+        BEQ InitializeSeedLoop
 
-\CopyPartialFile{../iridisalpha/src/iridisalpha.asm}{tmp.asm}{966}{981}%
-\lstinputlisting[caption=Use our seed value to pull 4 bytes from \icode{titleMusicSeedArray} and
-store them in \icode{titleMusicNoteArray}]{tmp.asm}
+        ; Otherwise multiply it by 4. We do this so that
+        ; the 4-byte sequence we choose always starts at
+        ; a 4-byte offset in titleMusicSeedArray.
+        TAX
+        LDA #$00
+MultiplyRandomNumBy4   
+        CLC
+        ADC #$04
+        DEX
+        BNE MultiplyRandomNumBy4
+\end{lstlisting}
 
-\CopyPartialFile{../iridisalpha/src/iridisalpha.asm}{tmp.asm}{933}{950}%
-\lstinputlisting[caption=Our seed bank for 4-byte sequences. It's 64 bytes long\, giving 16 possibles sequences in all.]{tmp.asm}
+\begin{lstlisting}[caption=Use our seed value to pull 4 bytes from \icode{titleMusicSeedArray} and
+store them in \icode{titleMusicNoteArray}]
+InitializeSeedLoop   
+        ; Put our random number in Y and use it as index into
+        ; the seed array.
+        TAY
+        ; Initialize X to 0, we will use this to iterate up to
+        ; 4 bytes for pulling from titleMusicSeedArray.
+        LDX #$00
+
+        ; Pick the first 4 bytes in titleMusicSeedArray from our
+        ; randomly chosen offset and put them in
+        ; titleMusicNoteArray.
+MusicSeedArrayLoop   
+        LDA titleMusicSeedArray,Y
+        STA titleMusicNoteArray,X
+        INY
+        INX
+        CPX #$04
+        BNE MusicSeedArrayLoop
+\end{lstlisting}
+
+\begin{lstlisting}[caption=Our seed bank for 4-byte sequences. It's 64 bytes long\, giving 16 possibles sequences in all.]
+; This is used to replenish titleMusicNoteArray with seed valuse
+; for the procedurally generated title screen music.
+titleMusicSeedArray .BYTE $00,$03,$06,$08
+                    .BYTE $00,$0C,$04,$08
+                    .BYTE $00,$07,$00,$05
+                    .BYTE $05,$00,$00,$05
+                    .BYTE $00,$06,$09,$05
+                    .BYTE $02,$04,$03,$04
+                    .BYTE $03,$07,$03,$00
+                    .BYTE $04,$08,$0C,$09
+                    .BYTE $07,$08,$04,$07
+                    .BYTE $00,$04,$07,$0E
+                    .BYTE $00,$00,$00,$07
+                    .BYTE $07,$04,$00,$0C
+                    .BYTE $04,$07,$00,$0C
+                    .BYTE $07,$08,$0A,$08
+                    .BYTE $0C,$00,$0C,$03
+                    .BYTE $0C,$03,$07,$00
+\end{lstlisting}
 
 The real source of variety here is this 'seed value' that we pluck at the very start of the process.
 This is done by \icode{PutProceduralByteInAccumulator} at the very start of \icode{SelectNewNotesToPlay}.
 
-\CopyPartialFile{../iridisalpha/src/iridisalpha.asm}{tmp.asm}{1053}{1066}%
-\lstinputlisting[caption=Our seed value ultimately comes from \icode{sourceOfSeedBytes}.]{tmp.asm}
+\begin{lstlisting}[caption= Our seed value ultimately comes from \icode{sourceOfSeedBytes}.]
+;-------------------------------------------------
+; PutProceduralByteInAccumulator
+; This function is self-modifying. Every time it
+; is called it increments the address that
+; sourceOfSeedBytes points to. Since sourceOfSeedBytes
+; intially points to $9A00, it will point to $9A01
+; after the first time it's called, $9A02 after the
+; second time it's called - and so on.
+;--------------------------------------------------
+PutProceduralByteInAccumulator
+srcOfProceduralBytes   =*+$01
+        LDA sourceOfSeedBytes
+        INC srcOfProceduralBytes
+        RTS
+\end{lstlisting}
 
 And \icode{sourceOfSeedBytes} turns out to be a string of 256 random-looking data at \icode{\$9A00}:
 
-\CopyPartialFile{../iridisalpha/src/graphics/planet_surface.asm}{tmp.asm}{593}{628}%
-\lstinputlisting[caption=Our seed value ultimately comes from \icode{sourceOfSeedBytes}., basicstyle=\tiny]{tmp.asm}
+\begin{lstlisting}[caption=Our seed value ultimately comes from \icode{sourceOfSeedBytes}.]
+*=$9A00
+sourceOfSeedBytes
+        .BYTE $E0,$D3,$33,$1F,$BF,$EC,$EF,$3E
+        .BYTE $FA,$70,$DA,$26,$87,$C2,$C9,$9C
+        .BYTE $F7,$FB,$C8,$85,$C1,$A9,$64,$AD
+        .BYTE $6B,$DE,$8B,$8F,$05,$5E,$54,$51
+        .BYTE $78,$0A,$6E,$6F,$FD,$0C,$A5,$32
+        .BYTE $F5,$56,$44,$75,$38,$D6,$23,$98
+        .BYTE $61,$D5,$49,$C6,$F2,$95,$BA,$08
+        .BYTE $C3,$3D,$F4,$F0,$21,$48,$84,$02
+        .BYTE $7E,$5B,$68,$55,$04,$92,$AE,$34
+        .BYTE $72,$F6,$71,$A1,$39,$4F,$74,$E5
+        .BYTE $E8,$31,$9A,$C7,$E3,$86,$6D,$14
+        .BYTE $60,$CD,$50,$FF,$82,$52,$66,$9E
+        .BYTE $E9,$53,$25,$93,$07,$77,$2E,$D7
+        .BYTE $1A,$62,$80,$B7,$0D,$1B,$15,$46
+        .BYTE $CE,$AA,$47,$24,$8D,$E1,$18,$67
+        .BYTE $6A,$4A,$F1,$B9,$D0,$91,$BC,$EE
+        .BYTE $B5,$D1,$7B,$A0,$DB,$36,$45,$E7
+        .BYTE $11,$22,$81,$FC,$58,$30,$28,$CB
+        .BYTE $8C,$B1,$0B,$A7,$DC,$B4,$9D,$57
+        .BYTE $B3,$ED,$3C,$43,$16,$8A,$EA,$D8
+        .BYTE $0E,$89,$1D,$1E,$DF,$9F,$BD,$BB
+        .BYTE $F9,$D9,$01,$3B,$7A,$BE,$69,$B8
+        .BYTE $5A,$A6,$E2,$96,$F8,$AC,$6C,$12
+        .BYTE $2D,$19,$2A
+\end{lstlisting}
 
 As you might have guessed by now, given that there are only 16 possible sequences to choose from the seed bank there must
 actually be a lot less than a hundred thousand billion possible them tunes. With only 16 sequences there may even be
@@ -606,18 +924,34 @@ relatively predicatble values between 0 and 15 and using that to choose one of t
 There's an additional bit of variability that gives us more than just 16 tunes though. This is the value we add to
 the note's index before we play it:
 
-\CopyPartialFile{../iridisalpha/src/iridisalpha.asm}{tmp.asm}{861}{868}%
-\lstinputlisting[caption=\icode{offsetForNextVoice3Note} introduces additional tune permutations.]{tmp.asm}
+\begin{lstlisting}[caption=\icode{offsetForNextVoice1Note} introduces additional tune permutations.]
+MaybePlayVoice1   
+        DEC voice1NoteDuration
+        BNE MaybePlayVoice2
 
-When we select a new tune the value \icode{offsetForNextVoice3Note} may be carrying over a value from the previous tune so
+        LDA #$30
+        STA voice1NoteDuration
+
+        LDX voice1IndexToMusicNoteArray
+        LDA titleMusicNoteArray,X
+        CLC
+        ADC offsetForNextVoice1Note
+        TAY
+        STY offsetForNextVoice2Note
+\end{lstlisting}
+
+When we select a new tune the value \icode{offsetForNextVoice1Note} may be carrying over a value from the previous tune so
 rather than be a consistent value every time the 'tune seed' is selected, it will vary in value. The result is that the
 logic will select a different note-group even though it used the same 4-byte 'tune seed'.
 
-Since the value in \icode{offsetForNextVoice3Note} is ultimately loaded from \icode{titleMusicSeedArray}:
+Since the value in \icode{offsetForNextVoice1Note} is ultimately loaded from \icode{titleMusicSeedArray}:
 
-\CopyPartialFile{../iridisalpha/src/iridisalpha.asm}{tmp.asm}{797}{799}%
-\lstinputlisting[caption=\icode{offsetForNextVoice1Note} is loaded from \icode{titleMusicNoteArray} and is propagated down
-to \icode{offsetForNextVoice3Note}.]{tmp.asm}
+\begin{lstlisting}[caption=\icode{offsetForNextVoice1Note} is loaded from \icode{titleMusicNoteArray} and is propagated down
+to \icode{offsetForNextVoice3Note}.]
+        LDX notesPlayedSinceLastKeyChange
+        LDA titleMusicNoteArray,X
+        STA offsetForNextVoice1Note
+\end{lstlisting}
 
 In practice there are 16 possible voice note sequences and 12 unique possible byte values to load from \icode{titleMusicSeedArray}
 so there are 192 possible tunes.
